--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
   </a>
   <!-- Elemento de audio para el sonido del botón "Entrar al Mundo" -->
   <audio id="game-start-audio" src="audios/Game Star.mp3" preload="auto"></audio>
+  <!-- Elemento de audio para la intro heroica de música de fondo, inicialmente silenciado -->
+  <audio id="heroic-intro-audio" src="audios/heroic-intro.mp3" preload="auto" muted loop></audio>
+  <!-- Elemento de audio para la voz heroica de la intro, inicialmente silenciado -->
+  <audio id="voice-intro-audio" src="audios/voice-intro.wav" preload="auto" muted></audio>
 </section>
 
 <!-- Main content of the page -->
@@ -49,8 +53,10 @@
   </nav>
 
   <section id="intro">
-    <h2>¿Qué es Kibotashi?</h2>
-    <p>Kibotashi es un idioma construido con el propósito de expresar ideas profundas con belleza estética y claridad estructural. Inspirado en el Hangul, lenguas élficas y la intuición simbólica, Kibotashi combina armonía fonética, emocional y visual. Su sistema está basado en bloques CVC (consonante-vocal-consonante), raíces temáticas, sufijos afectivos y una fonología limpia y amable con la habla humana.</p>
+    <h2>🌟 ¡Bienvenido/a al sitio oficial de la lengua Kibotashi! 🌟</h2>
+    <p>
+      ¡Me da gusto ver que te animas a emprender este viaje! Kibotashi no es solo un idioma, es una puerta a un mundo donde cada carácter encierra intención y cada palabra resuena con el alma. Inspirado en la belleza del Hangul, la profundidad de las lenguas élficas y la intuición simbólica, Kibotashi combina armonía fonética, emocional y visual. Su sistema está basado en bloques CVC (consonante-vocal-consonante), raíces temáticas, sufijos afectivos y una fonología limpia y amable con el habla humana. Prepárate para descubrir una lengua pura nacida del corazón, la estructura y el símbolo.
+    </p>
   </section>
 
   <section id="pronombres">
@@ -116,7 +122,7 @@
     <table>
       <tr><th>Interrogativo</th><th>Significado</th><th>Ejemplo</th></tr>
       <tr><td>Na</td><td>¿Qué?</td><td>Na Tarenua? (¿Qué es familia?)</td></tr>
-      <tr><td>Né</td><td>¿Cómo?</td><td>Bua Binua Né? (¿Cómo te sientes?)</td>
+      <tr><td>Né</td><td>¿Cómo?</td><td>Bua Binua Né? (¿Cómo te sientes?)</td></tr>
       <tr><td>Non</td><td>¿Dónde?</td><td>Janua Non? (¿Dónde vas?)</td></tr>
       <tr><td>Nen</td><td>¿Cuándo?</td><td>Binor Nen? (¿Cuándo sentiste?)</td></tr>
     </table>
@@ -172,7 +178,7 @@
     <table>
       <tr><th>Kibotashi</th><th>Español</th><th>Fonética</th></tr>
       <tr><td>Nirel</td><td>Persona</td><td>/ˈni.ʁel/</td></tr>
-      <tr><td>Maran</td><td>Compañero/a</td><td>/ˈma.ʁan/</td>
+      <tr><td>Maran</td><td>Compañero/a</td><td>/ˈma.ʁan/</td></tr>
       <tr><td>Kuren</td><td>Amigo/a</td><td>/ˈku.ʁen/</td>
       <tr><td>Naviir</td><td>Pareja</td><td>/ˈna.viːʁ/</td>
       <tr><td>Tareni</td><td>Madre</td><td>/ˈta.ʁe.ni/</td>
@@ -220,7 +226,7 @@
       <tr><td>/a/</td><td>A</td><td class="character-cell" data-phoneme="a">◉</td><td>como “a” abierta</td></tr>
       <tr><td>/e/</td><td>E</td><td class="character-cell" data-phoneme="e">◍</td><td>como “e” media</td>
       <tr><td>/i/</td><td>I</td><td class="character-cell" data-phoneme="i">◯</td><td>como “i” tensa</td>
-      <tr><td>/o/</td><td>O</td><td class="character-cell" data-phoneme="o">◎</td><td>como “o” profunda</td>
+      <tr><td>/o/</td><td>O</td><td class="character-cell" data-phoneme="o">◎</td><td>como “o” profunda</td></tr>
       <tr><td>/u/</td><td>U</td><td class="character-cell" data-phoneme="u">◌</td><td>como “u” redonda</td></tr>
     </table>
   </section>
