--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <ul style="margin-top: 1rem;">
             <li><strong>Ejemplo 1:</strong> <code>Kat</code> (amor) = K + A + T → ⧫◉⦾</li>
             <li><strong>Ejemplo 2:</strong> <code>Biné</code> (alegría) = B + I + N + Énfasis tonal → ⬸◯⏁</li>
-            <li><strong>Ejemplo 3:</strong> <code>Tin</code> (ternura) = T + I + N → ⦾◯⏁</li>
+            <li><strong>Ejemplo 3:</b> <code>Tin</code> (ternura) = T + I + N → ⦾◯⏁</li>
         </ul>
         <p>Si usas herramientas interactivas, puedes representar cada carácter con un SVG o imagen ilustrativa basada en estos bloques.</p>
     </section>
@@ -243,6 +243,7 @@
         <h2>📘 Glosario Kibotashi</h2>
 
         <input type="text" id="filtro-palabra" placeholder="🔍 Buscar palabra...">
+        <button id="buscar-palabra-btn" class="play-button" style="margin-left: 10px;">Buscar</button> <!-- Nuevo botón de buscar -->
         <select id="filtro-categoria">
             <option value="">Todas las categorías</option>
             <option>Acción</option>
