--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">Kibotashi</div>
-            <button class="hamburger" id="hamburger">&#9776;</button>
+            <button class="hamburger" id="hamburger" aria-label="Toggle navigation">&#9776;</button>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="#intro">Inicio</a></li>
                 <li><a href="#pronombres">Pronombres</a></li>
@@ -80,8 +80,8 @@
         <table>
             <tr><th>Sufijo</th><th>Significado</th><th>Ejemplo</th></tr>
             <tr><td>-en</td><td>Mi</td><td>Katen = mi amor</td></tr>
-            <tr><td>-ua</td><td>Tu</td><td>Katua = tu amor</td>
-            <tr><td>-sa</td><td>Su</td><td>Katsa = su amor</td>
+            <tr><td>-ua</td><td>Tu</td><td>Katua = tu amor</td></tr>
+            <tr><td>-sa</td><td>Su</td><td>Katsa = su amor</td></tr>
             <tr><td>-nal</td><td>Nuestro</td><td>Katnal = nuestro amor</td></tr>
         </table>
     </section>
@@ -92,14 +92,14 @@
         <table>
             <tr><th>Kibotashi</th><th>Español</th><th>Fonética (IPA)</th></tr>
             <tr><td>Ta</td><td>Ser</td><td>/ta/</td></tr>
-            <tr><td>Ni</td><td>Estar</td><td>/ni/</td>
-            <tr><td>Kel</td><td>Tener</td><td>/kel/</td>
-            <tr><td>Mir</td><td>Hacer</td><td>/miʁ/</td>
-            <tr><td>Bin</td><td>Sentir</td><td>/bin/</td>
-            <tr><td>Jan</td><td>Ir</td><td>/ʒan/</td>
-            <tr><td>Vael</td><td>Decir</td><td>/ˈva.el/</td>
-            <tr><td>Zar</td><td>Saber</td><td>/zaʁ/</td>
-            <tr><td>Katun</td><td>Querer</td><td>/ˈka.tun/</td>
+            <tr><td>Ni</td><td>Estar</td><td>/ni/</td></tr>
+            <tr><td>Kel</td><td>Tener</td><td>/kel/</td></tr>
+            <tr><td>Mir</td><td>Hacer</td><td>/miʁ/</td></tr>
+            <tr><td>Bin</td><td>Sentir</td><td>/bin/</td></tr>
+            <tr><td>Jan</td><td>Ir</td><td>/ʒan/</td></tr>
+            <tr><td>Vael</td><td>Decir</td><td>/ˈva.el/</td></tr>
+            <tr><td>Zar</td><td>Saber</td><td>/zaʁ/</td></tr>
+            <tr><td>Katun</td><td>Querer</td><td>/ˈka.tun/</td></tr>
             <tr><td>Solv</td><td>Poder</td><td>/solv/</td></tr>
         </table>
     </section>
@@ -111,7 +111,7 @@
             <li><strong>Presente:</strong> raíz + terminación personal (Tao, Tua, Tai...)</li>
             <li><strong>Pasado:</strong> raíz + "or" (Taor = fui)</li>
             <li><strong>Futuro:</strong> raíz + "el" (Tael = seré)</li>
-            <li><strong>Negación:</b> Ne + verbo conjugado (Netao = no soy)</li>
+            <li><strong>Negación:</strong> Ne + verbo conjugado (Netao = no soy)</li>
         </ul>
         <h3>Conjugación del verbo Ta (ser)</h3>
         <table>
@@ -148,8 +148,8 @@
             <tr><td>/s/</td><td>S</td><td class="character-cell" data-phoneme="s">␊</td><td>como “s” suave</td></tr>
             <tr><td>/l/</td><td>L</td><td class="character-cell" data-phoneme="l">⨅</td><td>como “l” clara</td></tr>
             <tr><td>/a/</td><td>A</td><td class="character-cell" data-phoneme="a">◉</td><td>como “a” abierta</td></tr>
-            <tr><td>/e/</td><td>E</td><td class="character-cell" data-phoneme="e">◍</td><td>como “e” media</td>
-            <tr><td>/i/</td><td>I</td><td class="character-cell" data-phoneme="i">◯</td><td>como “i” tensa</td>
+            <tr><td>/e/</td><td>E</td><td class="character-cell" data-phoneme="e">◍</td><td>como “e” media</td></tr>
+            <tr><td>/i/</td><td>I</td><td class="character-cell" data-phoneme="i">◯</td><td>como “i” tensa</td></tr>
             <tr><td>/o/</td><td>O</td><td class="character-cell" data-phoneme="o">◎</td><td>como “o” profunda</td></tr>
             <tr><td>/u/</td><td>U</td><td class="character-cell" data-phoneme="u">◌</td><td>como “u” redonda</td></tr>
         </table>
@@ -172,15 +172,15 @@
         <h3>Orden de Palabras Básico (Sujeto-Verbo-Objeto)</h3>
         <p>El orden más común en Kibotashi es <strong>Sujeto + Verbo + Objeto</strong>. Los adjetivos generalmente preceden a los sustantivos y los adverbios siguen a los verbos.</p>
         <ul style="margin-top: 1rem;">
-            <li><strong>Ena Katun Katen.</strong> (Yo querer mi amor.) - *I want my love.*</li>
-            <li><strong>Bua Mir Tovar.</strong> (Tú hacer voz.) - *You make a sound/voice.*</li>
-            <li><strong>Sual Zalin Naviirsa.</b> (Él/Ella cuidar su pareja.) - *He/She cares for their partner.*</li>
+            <li><strong>Ena Katun Katen.</strong> (Yo querer mi amor.) - <i>I want my love.</i></li>
+            <li><strong>Bua Mir Tovar.</strong> (Tú hacer voz.) - <i>You make a sound/voice.</i></li>
+            <li><strong>Sual Zalin Naviirsa.</strong> (Él/Ella cuidar su pareja.) - <i>He/She cares for their partner.</i></li>
         </ul>
         <h3>Ejemplos de frases</h3>
         <table>
             <tr><th>Kibotashi</th><th>Traducción Literal</th><th>Significado</th></tr>
             <tr><td data-pron="/e.na ˈta.o ˈku.ʁen/">Ena Tao Kuren.</td><td>Yo ser amigo.</td><td>Soy un amigo.</td></tr>
-            <tr><td data-pron="/ˈbua ˈjan.el ˈnon/">Bua Janel Non?</td><td>Tú irás dónde?</td><td>¿Adónde irás?</td></td></tr>
+            <tr><td data-pron="/ˈbua ˈjan.el ˈnon/">Bua Janel Non?</td><td>Tú irás dónde?</td><td>¿Adónde irás?</td></tr>
             <tr><td data-pron="/ˈmi.var ˈma.ʁan.an/">Mivar Maranan.</td><td>Acompañar compañero familiar.</td><td>Acompañar al compañero de confianza.</td></tr>
         </table>
     </section>
@@ -194,7 +194,7 @@
             <select id="verb-select"></select>
             <select id="tense-select"></select>
             <select id="object-select"></select>
-            <label for="negation-checkbox">
+            <label for="negation-checkbox" style="display:flex; align-items:center; gap:0.5rem;">
                 <input type="checkbox" id="negation-checkbox"> Negación
             </label>
             <select id="mood-select">
@@ -208,11 +208,10 @@
                 <option value="an">Confianza (-an)</option>
             </select>
             <select id="emotion-select"> <!-- AÑADIDO: Select para emociones -->
-                <option value="tono neutro">Tono Neutro</option>
-                <option value="alegre">Alegre</option>
-                <option value="triste">Triste</option>
-                <option value="enojado">Enojado</option>
-                <option value="sorprendido">Sorprendido</option>
+                <option value="neutro">Tono Neutro</option>
+                <option value="poetico">Poético</option>
+                <option value="afectivo">Afectivo</option>
+                <option value="melancolico">Melancólico</option>
             </select>
             <label style="display:flex; align-items:center; gap:0.5rem;">
                 <input type="checkbox" id="randomize-checkbox" />
