--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
             <p id="formed-kibotashi-word"></p>
             <p class="ipa">IPA: <span id="formed-ipa-word"></span></p>
             <p class="meaning">Significado: <span id="formed-meaning-word"></span></p>
+            <p id="word-exists-status" class="word-status"></p> <!-- NUEVO: Mensaje de estado de existencia -->
             <button id="speak-formed-word-btn" class="play-output-button">🗣️ Escuchar Palabra</button>
         </div>
     </section>
